--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Untitled</title>
+	<title>Okanagan Valley Salts and Rubs</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,6 +26,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+<!--
 						<li>
 							<a href="#">Dropdown</a>
 							<ul>
@@ -48,6 +49,7 @@
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="generic.html">Generic</a></li>
 						<li><a href="contact.html">Contact</a></li>
+-->
 					</ul>
 				</nav>
 			</div>
@@ -130,7 +132,7 @@
 	
 			<!-- Copyright -->
 			<div id="copyright">
-				<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
+				<span>&copy; Okanagan Valley <span>Salts and Rubs</span>. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
 			</div>
 		</div>
 	</div>
