--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 						<div class="actions" style="margin:10px;padding:10px;">
 							<h3>A selection of handmade spices and rubs created by Nadine & Chef Chris Remington</h3>
 							<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
-							<p> Click below to contact us or visit us on our Facebook page!</p>
+							<p>Click below to contact us or visit us on our Facebook page!</p>
 							<p>We are currently available at Hillside Winery, Penticton Whole Foods, Penticton Wine & Visitors Center, The Hooded Merganser, and Osooyos Home Hardware!</p>
-							<a href="#" class="button button-big">Magna gravida commodo</a>
+							<a href="#" class="button button-big">Get In Touch!</a>
 						</div>
 					</div>
 				</div>
