--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="/#about">About</a></li>
 <!--
 						<li>
 							<a href="#">Dropdown</a>
@@ -98,7 +99,7 @@
 			</div>
 			<br />
 			<!-- Main -->
-			<div id="main" class="container">
+			<div id="about" class="container">
 				<div class="row">
 					<!-- Content -->
 					<div id="content" class="12u">
