--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="/#about">About</a></li>
-						<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 <!--
 						<li>
 							<a href="#">Dropdown</a>
