--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="/#about">About</a></li>
-						<li>
+						<li class="activebox">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
 						</li>
