--- a/index.html
+++ b/index.html
@@ -73,16 +73,12 @@
 							<div class="viewer">
 								<div class="reel">
 									<div class="slide">
-										<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
+										<div class="caption"><strong>Okanagan Valley Salts and Rubs is a selection of handmade spices and rubs created by Nadine & Chef Chris Remington</strong></div>
 										<img src="https://cache.nebula.phx3.secureserver.net/obj/MDkxMkY3Q0E3MjU2NEVGODE0QTA6ZmM0MDk1YWQzYWEwMDY1YTQ4Zjc2MGM5YWY2MmJkODY=" alt="">
 									</div>
 									<div class="slide">
 										<div class="caption"><strong>Come enjoy a glass and the view at Lang Vineyards and pick us up while youre there!</div>
 										<img src="https://scontent.xx.fbcdn.net/hphotos-xfa1/t31.0-8/11187125_469470559884125_2082580026882467810_o.jpg" alt="" />
-									</div>
-									<div class="slide">
-										<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-										<img src="images/slide03.jpg" alt="" />
 									</div>
 								</div>
 							</div>
@@ -90,7 +86,6 @@
 								<ul>
 									<li class="active">1</li>
 									<li>2</li>
-									<li>3</li>
 								</ul>
 							</div>
 							<div class="caption-line"></div>
@@ -105,14 +100,14 @@
 			<!-- Main -->
 			<div id="about" class="container">
 				<div class="row">
-					<!-- Content -->
-					<div id="content" class="12u">
-						<div class="actions" style="margin:10px;padding:10px;">
+					<div id="content" class="12u" style="padding:10px;">
+						<header>
 							<h3>A selection of handmade spices and rubs created by Nadine & Chef Chris Remington</h3>
-							<hr />
-							<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
-							<p>Click below to contact us or visit us on our Facebook page!</p>
-							<p>We are currently available at Hillside Winery, Penticton Whole Foods, Penticton Wine & Visitors Center, The Hooded Merganser, and Osooyos Home Hardware!</p>
+						</header>
+						<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
+						<p>Click below to contact us or visit us on our Facebook page!</p>
+						<p>We are currently available at Hillside Winery, Penticton Whole Foods, Lang Vineyards, and Osooyos Home Hardware!</p>
+						<div class="actions">
 							<a href="#" class="button button-big">Get In Touch!</a>
 						</div>
 					</div>
@@ -138,7 +133,7 @@
 	
 			<!-- Copyright -->
 			<div id="copyright">
-				<span>&copy; Okanagan Valley <span>Salts and Rubs</span>. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
+				<span>&copy; Okanagan Valley <span>Salts and Rubs</span>. All rights reserved.</span>
 			</div>
 		</div>
 	</div>
@@ -153,6 +148,5 @@
 	<script src="assets/js/util.js"></script>
 	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="assets/js/main.js"></script>
-
 </body>
 </html>
