--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div id="content" class="12u" style="padding:10px;">
 						<header>
-							<h3>A selection of handmade spices and rubs created by Nadine & Chef Chris Remington</h3>
+							<h2>Okanagan Valley <span>Salts and Rubs</span></h2>
 						</header>
 						<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
 						<p>Click below to contact us or visit us on our Facebook page!</p>
