--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 						<header>
 							<h2>Okanagan Valley <span>Salts and Rubs</span></h2>
 						</header>
+						<p>A selection of handmade spices and rubs created by Nadine & Chef Chris Remington</p>
 						<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
 						<p>Click below to contact us or visit us on our Facebook page!</p>
 						<p>We are currently available at Hillside Winery, Penticton Whole Foods, Lang Vineyards, and Osooyos Home Hardware!</p>
