--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 										<img src="https://cache.nebula.phx3.secureserver.net/obj/MDkxMkY3Q0E3MjU2NEVGODE0QTA6ZmM0MDk1YWQzYWEwMDY1YTQ4Zjc2MGM5YWY2MmJkODY=" alt="">
 									</div>
 									<div class="slide">
-										<div class="caption"><strong>Come enjoy a glass and the view at Lang Vineyards and pick us up while youre there!</div>
+										<div class="caption"><strong>Check out our selections at GardenWorks!</div>
+										<img src="/images/gardenworks.jpeg" alt="" />
+									</div>
+									<div class="slide">
+										<div class="caption"><strong>Come enjoy a glass and the view at Lang Vineyards and pick us up while you're there!</div>
 										<img src="https://scontent.xx.fbcdn.net/hphotos-xfa1/t31.0-8/11187125_469470559884125_2082580026882467810_o.jpg" alt="" />
 									</div>
 								</div>
@@ -107,7 +111,7 @@
 						<p>A selection of handmade spices and rubs created by Nadine & Chef Chris Remington</p>
 						<p>We are pleased to offer you a selection of locally sourced, hand blended salts and rubs as well as a selection of specialty salts. None of our products contain MSG, Gluten or chemical additives.</p>
 						<p>Click below to contact us or visit us on our Facebook page!</p>
-						<p>We are currently available at Hillside Winery, Penticton Whole Foods, Lang Vineyards, and Osooyos Home Hardware!</p>
+						<p>We are currently available at GardenWorks Penticton, Hillside Winery, Penticton Whole Foods, Lang Vineyards, and Osooyos Home Hardware!</p>
 						<div class="actions">
 							<a href="#" class="button button-big">Get In Touch!</a>
 						</div>
