--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li class="activebox">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs/"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
 						</li>
 <!--
@@ -77,7 +77,7 @@
 										<img src="https://cache.nebula.phx3.secureserver.net/obj/MDkxMkY3Q0E3MjU2NEVGODE0QTA6ZmM0MDk1YWQzYWEwMDY1YTQ4Zjc2MGM5YWY2MmJkODY=" alt="">
 									</div>
 									<div class="slide">
-										<div class="caption"><strong>Check out our selections at GardenWorks!</div>
+										<div class="caption"><strong>Check out our selections in the gourmet section at GardenWorks!</div>
 										<img src="/images/gardenworks.jpeg" alt="" />
 									</div>
 									<div class="slide">
@@ -128,11 +128,8 @@
 			<!-- Footer -->
 			<div id="footer">
 				<ul class="contact">
-					<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/OkanaganValleySaltsandRubs/" class="fa fa-facebook"><span>Facebook</span></a></li>
 					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-					<li><a href="#" class="fa fa-pinterest"><span>Pinterest</span></a></li>
-					<li><a href="#" class="fa fa-linkedin"><span>Linkedin</span></a></li>
 					<li><a href="#" class="fa fa-envelope"><span>Email</span></a></li>
 				</ul>
 			</div>
