--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li class="activebox">
-							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs/"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs/"><i class="fa fa-facebook"></i> OkanaganValleySaltsandRubs</a>
 						</li>
 <!--
 						<li>
@@ -128,9 +127,7 @@
 			<!-- Footer -->
 			<div id="footer">
 				<ul class="contact">
-					<li><a href="https://www.facebook.com/OkanaganValleySaltsandRubs/" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-envelope"><span>Email</span></a></li>
+					<li><a href="https://www.facebook.com/OkanaganValleySaltsandRubs/" class="fa fa-facebook"><span>Facebook</span> OkanaganValleySaltsandRubs</a></li>
 				</ul>
 			</div>
 	
