--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <html>
 <head>
 	<title>Okanagan Valley Salts and Rubs</title>
+	<meta property="og:title" content="Okanagan Valley Salts and Rubs"/>
+	<meta name="description" content="Okanagan Valley Salts and Rubs is a selection of handmade spices and rubs created by Nadine & Chef Chris Remington"/>
+	<meta property="og:description" content="Okanagan Valley Salts and Rubs is a selection of handmade spices and rubs created by Nadine & Chef Chris Remington"/>
+	<link rel="canonical" href="http://okanaganspicecompany.com/"/>
+	<meta property="og:url" content="http://okanaganspicecompany.com/"/>
+	<meta property="og:site_name" content="Okanagan Valley Salts and Rubs"/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:site" content="@freekrai"/>
+	<meta property="fb:admins" content="604781976"/>
+	<meta property="article:publisher" content="1416546778590314"/>
+	<meta property="fb:app_id" content="474703915878478"/>
+	<script type="application/ld+json">
+	  {
+	    "@context": "http://schema.org",
+	    "@type": "WebSite",
+	    "name": "Okanagan Valley Salts and Rubs",
+	    "headline": "Home",
+	    "description": "Okanagan Valley Salts and Rubs is a selection of handmade spices and rubs created by Nadine & Chef Chris Remington",
+	    "sameAs": ["https://www.facebook.com/OkanaganValleySaltsandRubs"],
+	    "url": "http://okanaganspicecompany.com/"
+	  }
+	</script>
+	<meta property="fb:pages" content="162518190579365"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,32 +51,8 @@
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li class="activebox">
-							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs/" class="fb"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs" class="fb"><i class="fa fa-facebook"></i></a>
 						</li>
-<!--
-						<li>
-							<a href="#">Dropdown</a>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li><a href="#">Etiam dolore nisl</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Veroeros feugiat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="contact.html">Contact</a></li>
--->
 					</ul>
 				</nav>
 			</div>
@@ -95,7 +94,6 @@
 							<div class="caption-line"></div>
 						</div>
 						<div class="actions">
-							<!-- a href="#" class="button button-big">Magna gravida commodo</a -->
 						</div>
 					</div>
 				</div>
@@ -114,6 +112,7 @@
 						<p>We are currently available at GardenWorks Penticton, Hillside Winery, Penticton Whole Foods, Lang Vineyards, and Osooyos Home Hardware!</p>
 						<div class="actions">
 							<a onclick="$('.contactform').toggle();" class="button button-big">Get In Touch!</a>
+							<a href="https://www.facebook.com/OkanaganValleySaltsandRubs" class="button button-big fb-btn">Like us on <i class="fa fa-facebook"></i>acebook</a>
 						</div>
 					</div>
 				</div>
@@ -123,20 +122,19 @@
 				<div class="row">
 					<div id="content" class="12u" style="padding:10px;">
 						<iframe height="597" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="https://okanaganspicecompany.wufoo.com/embed/z1jam0if1hcm96m/?header=hide">
-						<a href="https://okanaganspicecompany.wufoo.com/forms/z1jam0if1hcm96m/">Fill out my Wufoo form!</a></iframe>
-						<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:none;">
-							<span class="notranslate">Use <a href="http://www.wufoo.com/partners/">Wufoo integrations</a> and get your data to your favorite apps.</span>
-						</div>
+							<a href="https://okanaganspicecompany.wufoo.com/forms/z1jam0if1hcm96m/">Fill out my Wufoo form!</a>
+						</iframe>
 					</div>
 				</div>
+			</div>
 		</div>
-
+		<br />
 		<!-- Footer Wrapper -->
 		<div id="footer-wrapper" class="container">
 <!--
 			<div id="footer">
 				<ul class="contact">
-					<li><a href="https://www.facebook.com/OkanaganValleySaltsandRubs/" class="fa fa-facebook fb"><span>Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/OkanaganValleySaltsandRubs" class="fa fa-facebook fb"><span>Facebook</span></a></li>
 				</ul>
 			</div>
 -->
